Added docker file

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "UI and API Automation of TheDigirev SM",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "wdio": "wdio run wdio.conf.js"
+        "test": "wdio run wdio.conf.js",
+        "wdio": "wdio run wdio.conf.js",
+        "report": "allure generate ./allure-results --clean && allure open"
     },
     "author": "Femi Oyedotun",
     "license": "ISC",
